refactoring immutable classes to records